--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,25 +7,20 @@ edition = "2021"
 
 [dependencies]
 cascade = "1.0.0"
-gtk4 = { version = "0.4.4", features = ["v4_4"] }
-gtk4-sys = "0.4.2"
-glib-sys = "0.15.1"
-gdk4 = "0.4.4"
+gtk4 = { version = "0.4.7", features = ["v4_4"] }
 gdk4-wayland = { version = "0.4.2", features = [ "wayland_crate" ], optional = true }
 gdk4-x11 = { version = "0.4.2", features = [ "xlib" ] }
-gio = "0.15.2"
 wayland-client = { version = "0.29.4", optional = true }
 wayland-protocols = { version = "0.29.4", features = [ "client", "unstable_protocols" ], optional = true }
 x11 = { version = "2.19.1", features = ["xlib"] }
 libcosmic = { git = "https://github.com/pop-os/libcosmic" }
 relm4-macros = { git = "https://github.com/AaronErhardt/Relm4" }
-pop-launcher-service = { git = "https://github.com/wash2/launcher.git" }
-pop-launcher = { git = "https://github.com/wash2/launcher.git" }
 serde = "1.0.134"
 serde_json = "1.0.75"
 tokio = { version = "1.15.0", features = ["sync"] }
 once_cell = "1.9.0"
 xdg = "2.4.0"
+cosmic-theme = { path = "../cosmic-theme" }
 
 [profile.release]
 incremental = true
