--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,8 @@ serde_json = "1.0.75"
 tokio = { version = "1.15.0", features = ["sync"] }
 once_cell = "1.9.0"
 xdg = "2.4.0"
-cosmic-theme = { path = "../cosmic-theme" }
+#cosmic-theme = { path = "../cosmic-theme" }
+cosmic-theme = { git = "https://github.com/pop-os/cosmic-theme" }
 
 [profile.release]
 incremental = true
