--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,13 @@
 [package]
-name = "cosmic-applibrary"
+name = "cosmic-app-library"
 version = "0.1.0"
+authors = ["Ashley Wulber <ashley@system76.com>"]
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+log = "0.4"
+pretty_env_logger = "0.4"
+gettext-rs = { version = "0.7", features = ["gettext-system"] }
 cascade = "1.0.0"
 gtk4 = { version = "0.4.7", features = ["v4_4"] }
 gdk4-wayland = { version = "0.4.2", features = [ "wayland_crate" ], optional = true }
@@ -22,6 +24,7 @@ once_cell = "1.9.0"
 xdg = "2.4.0"
 #cosmic-theme = { path = "../cosmic-theme" }
 cosmic-theme = { git = "https://github.com/pop-os/cosmic-theme" }
+dirs = "4.0.0"
 
 [profile.release]
 incremental = true
