read only and styling

--- a/build-aux/com.System76.AppLibrary.Devel.json
+++ b/build-aux/com.System76.AppLibrary.Devel.json
@@ -13,8 +13,8 @@
 	    "--filesystem=xdg-data/cosmic-theme:ro",
      	"--filesystem=xdg-config/com.System76.CosmicAppLibrary:ro",
 	    "--filesystem=xdg-data/com.System76.CosmicAppLibrary:create",
-	    "--filesystem=host-os",
-	    "--filesystem=home/.local/share",
+	    "--filesystem=host-os:ro",
+	    "--filesystem=home/.local/share:ro",
 	    "--talk-name=org.freedesktop.Flatpak",
         "--socket=fallback-x11",
         "--socket=wayland",
