--- a/build-aux/com.System76.AppLibrary.Devel.json
+++ b/build-aux/com.System76.AppLibrary.Devel.json
@@ -12,8 +12,8 @@
         "--filesystem=xdg-config/cosmic-theme:ro",
 	    "--filesystem=xdg-data/cosmic-theme:ro",
      	"--filesystem=xdg-config/com.System76.CosmicAppLibrary:ro",
-	    "--filesystem=xdg-data/com.System76.CosmicAppLibrary:create",
 	    "--filesystem=host-os:ro",
+        "--filesystem=/var/lib/flatpak:ro",
 	    "--filesystem=home/.local/share:ro",
 	    "--talk-name=org.freedesktop.Flatpak",
         "--socket=fallback-x11",
