--- a/meson_options.txt
+++ b/meson_options.txt
@@ -8,3 +8,10 @@ option(
   value: 'default',
   description: 'The build profile for Cosmic App Library. One of "default" or "development".'
 )
+
+option(
+  'vendor',
+  type: 'boolean',
+  value: true,
+  description: 'Whether or not sources are vendored.'
+)
