meson option vendor default to false

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -12,6 +12,6 @@ option(
 option(
   'vendor',
   type: 'boolean',
-  value: true,
+  value: false,
   description: 'Whether or not sources are vendored.'
 )
