--- a/build-aux/com.System76.CosmicAppLibrary.Devel.json
+++ b/build-aux/com.System76.CosmicAppLibrary.Devel.json
@@ -1,5 +1,5 @@
 {
-    "app-id": "com.System76.AppLibrary.Devel",
+    "app-id": "com.System76.CosmicAppLibrary.Devel",
     "runtime": "org.gnome.Platform",
     "runtime-version": "41",
     "sdk": "org.gnome.Sdk",
