improv: Compile gresources into binary
As far as I'm aware, gresources are usually compiled into the binary.
Gtk-rs makes this fairly easy.

`gio::compile_resources` also instructs Cargo to watch for changes to
files used as resources, and re-run `build.rs` is any have changed.

(You see, I'm somewhat fond of `gio::compile_resources` since I'm the
one who added it to gtk-rs).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,9 @@ i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-request
 i18n-embed-fl = "0.6.4"
 rust-embed = "6.3.0"
 
+[build-dependencies]
+gio = "0.15.10"
+
 [profile.release]
 incremental = true
 debug = 1
