--- a/data/com.system76.CosmicAppLibrary.desktop
+++ b/data/com.system76.CosmicAppLibrary.desktop
@@ -7,6 +7,6 @@ Terminal=false
 Categories=GNOME;GTK;
 Keywords=Gnome;GTK;
 # Translators: Do NOT translate or transliterate this text (this is an icon file name)!
-Icon=@icon@
+Icon=com.system76.CosmicAppLibrary.svg
 StartupNotify=true
 NoDisplay=true
