--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ wayland-client = { version = "0.29.4", optional = true }
 wayland-protocols = { version = "0.29.4", features = [ "client", "unstable_protocols" ], optional = true }
 x11 = { version = "2.19.1", features = ["xlib"] }
 libcosmic = { git = "https://github.com/pop-os/libcosmic" }
-relm4-macros = { git = "https://github.com/AaronErhardt/Relm4" }
+relm4-macros = { git = "https://github.com/Relm4/Relm4" }
 serde = "1.0.134"
 serde_json = "1.0.75"
 tokio = { version = "1.15.0", features = ["sync"] }
