--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ pretty_env_logger = "0.4"
 cascade = "1.0.0"
 gtk4 = { git = "https://github.com/gtk-rs/gtk4-rs", features=["v4_4"] }
 adw = { git = "https://gitlab.gnome.org/World/Rust/libadwaita-rs", package = "libadwaita"}
+libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false }
 relm4-macros = { git = "https://github.com/Relm4/Relm4.git", branch = "next" }
 serde = { version = "1.0.134", features = ["derive"] }
 serde_json = "1.0.75"
