wip: iced-refactor

--- a/debian/control
+++ b/debian/control
@@ -1,23 +1,22 @@
 Source: cosmic-app-library
 Section: admin
 Priority: optional
-Maintainer: System76 <info@system76.com>
+Maintainer: Ashley Wulber <ashley@system76.com>
 Build-Depends:
   debhelper (>= 11),
   debhelper-compat (= 11),
   rustc (>=1.57),
   cargo,
+  meson,
   libgtk-4-dev,
-  libadwaita-1-dev,
-  just,
   pkg-config,
   desktop-file-utils,
 Standards-Version: 4.3.0
-Homepage: https://github.com/pop-os/cosmic-applibrary
+Homepage: https://github.com/pop-os/cosmic-app-library
 
 Package: cosmic-app-library
 Architecture: amd64 arm64
 Depends:
   ${misc:Depends},
   ${shlibs:Depends}
-Description: XDG Shell Wrapper
+Description: Cosmic App Library
