--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,24 @@
-# Cargo
-.cargo.
 target/
 build/
 _build/
 builddir/
-vendor/
-vendor.tar
-
 build-aux/app
 build-aux/.flatpak-builder/
+src/config.rs
+*.ui.in~
+*.ui~
 .flatpak/
-flatpak_app
-.flatpak-builder
+.flatpak-builder/
+flatpak_app/
+vendor
+vendor.tar
+.cargo/
 
-.*
 debian/*
 !debian/*install
 !debian/*postinst
 !debian/changelog
+!debian/copyright
 !debian/control
 !debian/links
 !debian/rules
