--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,33 +5,26 @@ authors = ["Ashley Wulber <ashley@system76.com>"]
 edition = "2021"
 
 [dependencies]
-log = "0.4"
+libcosmic = { git = "https://github.com/pop-os/libcosmic/", branch = "sctk-cosmic-design-system", default-features = false, features = ["wayland"] }
+iced_sctk = { git = "https://github.com/pop-os/iced-sctk" }
+tokio = { version = "1.17.0", features = ["sync", "rt", "rt-multi-thread", "process"] }
 pretty_env_logger = "0.4"
-cascade = "1.0.0"
-gtk4 = { git = "https://github.com/gtk-rs/gtk4-rs", features=["v4_4"] }
-adw = { git = "https://gitlab.gnome.org/World/Rust/libadwaita-rs", package = "libadwaita"}
-libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false }
-relm4-macros = { git = "https://github.com/Relm4/Relm4.git", branch = "next" }
-serde = { version = "1.0.134", features = ["derive"] }
-serde_json = "1.0.75"
-once_cell = "1.9.0"
+log = "0.4"
+once_cell = "1.9"
+futures = "0.3.21"
 xdg = "2.4.0"
-dirs = "4.0.0"
-walkdir = "2.3.2"
-freedesktop-desktop-entry = "0.5.0"
-anyhow = "1.0.56"
+# Application i18n
 i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"] }
 i18n-embed-fl = "0.6.4"
 rust-embed = "6.3.0"
-zbus = "3.0.0"
-
-[build-dependencies]
-glib-build-tools = { git = "https://github.com/gtk-rs/gtk-rs-core" }
-
-[profile.release]
-incremental = true
-debug = 1
-
-[features]
-default = ["dev"]
-dev = []
+zbus = "3.5.0"
+glob = "0.3.0"
+freedesktop-desktop-entry = "0.5.0"
+shlex = "1.1.0"
+serde = { version = "1.0.134", features = ["derive"] }
+ron = "0.8.0"
+notify = "*"
+anyhow = "1.0"
+itertools = "0.10"
+# freedesktop-icons = {git = "https://github.com/wash2/freedestkop-icons"}
+freedesktop-icons = {path = "../freedestkop-icons"}
