--- a/data/com.system76.CosmicAppLibrary.desktop.in.in
+++ b/data/com.system76.CosmicAppLibrary.desktop.in.in
@@ -5,9 +5,8 @@ Type=Application
 Exec=cosmic-app-library
 Terminal=false
 Categories=GNOME;GTK;
+# Translators: Search terms to find this application. Do NOT translate or localize the semicolons! The list MUST also end with a semicolon!
 Keywords=Gnome;GTK;
 # Translators: Do NOT translate or transliterate this text (this is an icon file name)!
-Icon=com.system76.CosmicAppLibrary.svg
+Icon=@icon@
 StartupNotify=true
-NoDisplay=true
-X-HostWaylandDisplay=true
