--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2021"
 
 [dependencies]
 libcosmic = { git = "https://github.com/pop-os/libcosmic/", branch = "master", default-features = false, features = ["wayland"] }
-iced_sctk = { git = "https://github.com/pop-os/iced-sctk" }
 tokio = { version = "1.17.0", features = ["sync", "rt", "rt-multi-thread", "process"] }
 pretty_env_logger = "0.4"
 log = "0.4"
@@ -26,13 +25,6 @@ ron = "0.8.0"
 notify = "*"
 anyhow = "1.0"
 itertools = "0.10"
-freedesktop-icons = {git = "https://github.com/wash2/freedestkop-icons"}
+freedesktop-icons = "0.2.2"
 # freedesktop-icons = {path = "../freedestkop-icons"}
 current_locale = "0.1.1"
-
-[dependencies.iced]
-git = "https://github.com/pop-os/iced.git"
-branch = "sctk-cosmic"
-# path = "../iced"
-default-features = false
-features = ["image", "svg", "tokio", "wayland"]
