--- a/debian/rules
+++ b/debian/rules
@@ -4,6 +4,7 @@ DESTDIR = debian/cosmic-app-library
 CLEAN ?= 1
 VENDOR ?= 1
 
+
 %:
 	dh $@
 
@@ -22,3 +23,9 @@ override_dh_auto_clean:
 		tar pcf vendor.tar vendor; \
 		rm -rf vendor; \
 	fi
+
+override_dh_auto_build:
+	just build-vendored
+
+override_dh_install:
+	just rootdir=$(DESTDIR) install
