--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 
 [dependencies]
 libcosmic = { git = "https://github.com/pop-os/libcosmic/", branch = "master", default-features = false, features = ["wayland", "tokio"] }
-tokio = { version = "1.17.0", features = ["sync", "rt", "rt-multi-thread", "process"] }
+tokio = { version = "1.17.0", features = ["sync", "rt", "process"] }
 pretty_env_logger = "0.4"
 log = "0.4"
 once_cell = "1.9"
@@ -27,3 +27,6 @@ anyhow = "1.0"
 itertools = "0.10"
 freedesktop-icons = "0.2.2"
 current_locale = "0.1.1"
+
+[profile.release]
+lto = "thin"
