--- a/data/com.system76.CosmicAppLibrary.desktop
+++ b/data/com.system76.CosmicAppLibrary.desktop
@@ -1,12 +1,12 @@
 [Desktop Entry]
 Name=Cosmic App Library
-Comment=Write a GTK + Rust application
+Comment=COSMIC App Library shell application
 Type=Application
 Exec=cosmic-app-library
 Terminal=false
-Categories=GNOME;GTK;
+Categories=COSMIC;ICED;
 # Translators: Search terms to find this application. Do NOT translate or localize the semicolons! The list MUST also end with a semicolon!
-Keywords=Gnome;GTK;
+Keywords=COSMIC;ICED;
 # Translators: Do NOT translate or transliterate this text (this is an icon file name)!
-Icon=@icon@
+Icon=com.system76.CosmicAppLibrary.svg
 StartupNotify=true
