--- a/data/com.system76.CosmicAppLibrary.desktop
+++ b/data/com.system76.CosmicAppLibrary.desktop
@@ -2,7 +2,7 @@
 Name=Cosmic App Library
 Comment=COSMIC App Library shell application
 Type=Application
-Exec=cosmic-app-library
+Exec=busctl --user call com.system76.CosmicAppLibrary /com/system76/CosmicAppLibrary com.system76.CosmicAppLibrary Toggle
 Terminal=false
 Categories=COSMIC;ICED;
 # Translators: Search terms to find this application. Do NOT translate or localize the semicolons! The list MUST also end with a semicolon!
