--- a/data/com.system76.CosmicAppLibrary.desktop
+++ b/data/com.system76.CosmicAppLibrary.desktop
@@ -10,3 +10,4 @@ Keywords=COSMIC;ICED;
 # Translators: Do NOT translate or transliterate this text (this is an icon file name)!
 Icon=com.system76.CosmicAppLibrary.svg
 StartupNotify=true
+NoDisplay=true
