--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,8 @@ authors = ["Ashley Wulber <ashley@system76.com>"]
 edition = "2021"
 
 [dependencies]
-libcosmic = { git = "https://github.com/pop-os/libcosmic/", default-features = false, features = ["wayland", "tokio"] }
-# libcosmic = { path = "../libcosmic", default-features = false, features = ["wayland", "tokio"] }
+libcosmic = { git = "https://github.com/pop-os/libcosmic/", default-features = false, features = ["wayland", "tokio", "single-instance"] }
+# libcosmic = { path = "../libcosmic", default-features = false, features = ["wayland", "tokio", "single-instance"] }
 tokio = { version = "1.17.0", features = ["sync", "rt", "process"] }
 pretty_env_logger = "0.5"
 log = "0.4"
@@ -30,6 +30,6 @@ freedesktop-icons = "0.2.4"
 current_locale = "0.1.1"
 url = "2.4"
 nix = "0.26"
-
+clap = { version = "4.4.8", features = ["derive"] }
 [profile.release]
 lto = "thin"
