--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,3 +33,6 @@ nix = "0.26"
 clap = { version = "4.4.8", features = ["derive"] }
 [profile.release]
 lto = "thin"
+
+[patch.crates-io]
+sctk = { package = "smithay-client-toolkit", git = "https://github.com/pop-os/client-toolkit", branch = "wayland-resize" }
