--- a/data/com.system76.CosmicAppLibrary.desktop
+++ b/data/com.system76.CosmicAppLibrary.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name=Cosmic App Library
+Name=Applications
 Comment=COSMIC App Library shell application
 Type=Application
 Exec=cosmic-app-library
