--- a/data/com.system76.CosmicAppLibrary.desktop
+++ b/data/com.system76.CosmicAppLibrary.desktop
@@ -8,6 +8,6 @@ Categories=COSMIC;ICED;
 # Translators: Search terms to find this application. Do NOT translate or localize the semicolons! The list MUST also end with a semicolon!
 Keywords=COSMIC;ICED;
 # Translators: Do NOT translate or transliterate this text (this is an icon file name)!
-Icon=com.system76.CosmicAppLibrary.svg
+Icon=com.system76.CosmicAppLibrary
 StartupNotify=true
 NoDisplay=true
