--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ default = []
 wgpu = ["libcosmic/wgpu"]
 
 [dependencies]
-libcosmic = { git = "https://github.com/pop-os/libcosmic/", default-features = false, features = ["wayland", "tokio", "single-instance", "dbus-config", "desktop"]}
+libcosmic = { git = "https://github.com/pop-os/libcosmic/", features = ["wayland", "tokio", "single-instance", "dbus-config", "desktop"]}
 tokio = { version = "1.17.0", features = ["sync", "rt", "process"] }
 pretty_env_logger = "0.5"
 log = "0.4"
