--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,13 @@ default = []
 wgpu = ["libcosmic/wgpu"]
 
 [dependencies]
-libcosmic = { git = "https://github.com/pop-os/libcosmic/", features = ["wayland", "tokio", "single-instance", "dbus-config", "desktop"]}
+libcosmic = { git = "https://github.com/pop-os/libcosmic/", features = [
+    "wayland",
+    "tokio",
+    "single-instance",
+    "dbus-config",
+    "desktop",
+] }
 tokio = { version = "1.17.0", features = ["sync", "rt", "process"] }
 pretty_env_logger = "0.5"
 log = "0.4"
@@ -16,10 +22,13 @@ once_cell = "1.9"
 futures = "0.3.21"
 xdg = "2.4.0"
 # Application i18n
-i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"] }
-i18n-embed-fl = "0.6.4"
-rust-embed = "6.3.0"
-zbus = "3.14"
+zbus = "4.2"
+i18n-embed = { version = "0.14.1", features = [
+    "fluent-system",
+    "desktop-requester",
+] }
+i18n-embed-fl = "0.8.0"
+rust-embed = "8.4.0"
 glob = "0.3.0"
 freedesktop-desktop-entry = "0.5.2"
 shlex = "1.1.0"
@@ -27,11 +36,11 @@ serde = { version = "1.0.134", features = ["derive"] }
 ron = "0.8.0"
 notify = "*"
 anyhow = "1.0"
-itertools = "0.11"
+itertools = "0.13"
 freedesktop-icons = "0.2.4"
 current_locale = "0.1.1"
 url = "2.4"
-nix = "0.26"
+nix = "0.28"
 clap = { version = "4.4.8", features = ["derive"] }
 switcheroo-control = { git = "https://github.com/pop-os/dbus-settings-bindings" }
 
