--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,13 +8,14 @@ default = []
 wgpu = ["libcosmic/wgpu"]
 
 [dependencies]
+zbus = "4.2"
 libcosmic = { git = "https://github.com/pop-os/libcosmic/", features = [
     "wayland",
     "tokio",
     "single-instance",
     "dbus-config",
     "desktop",
-    "xdg-portal"
+    "xdg-portal",
 ] }
 tokio = { version = "1.17.0", features = ["sync", "rt", "process"] }
 pretty_env_logger = "0.5"
@@ -23,7 +24,6 @@ once_cell = "1.9"
 futures = "0.3.21"
 xdg = "2.4.0"
 # Application i18n
-zbus = "4.2"
 i18n-embed = { version = "0.14.1", features = [
     "fluent-system",
     "desktop-requester",
