--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,9 @@ name = "cosmic-app-library"
 version = "0.1.0"
 authors = ["Ashley Wulber <ashley@system76.com>"]
 edition = "2021"
+
 [features]
-default = []
+default = ["wgpu"]
 wgpu = ["libcosmic/wgpu"]
 
 [dependencies]
