--- a/data/com.system76.CosmicAppLibrary.desktop
+++ b/data/com.system76.CosmicAppLibrary.desktop
@@ -4,7 +4,7 @@ Comment=COSMIC App Library shell application
 Type=Application
 Exec=cosmic-app-library
 Terminal=false
-Categories=COSMIC;ICED;
+Categories=X-COSMIC;ICED;
 # Translators: Search terms to find this application. Do NOT translate or localize the semicolons! The list MUST also end with a semicolon!
 Keywords=COSMIC;ICED;
 # Translators: Do NOT translate or transliterate this text (this is an icon file name)!
