--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,8 @@ url = "2.4"
 nix = "0.28"
 clap = { version = "4.4.8", features = ["derive"] }
 switcheroo-control = { git = "https://github.com/pop-os/dbus-settings-bindings" }
+# cosmic-app-list-config = { path = "../cosmic-applets/cosmic-app-list/cosmic-app-list-config" }
+cosmic-app-list-config = { git = "https://github.com/pop-os/cosmic-applets", branch = "wip-overflow" }
 
 [profile.release]
 lto = "thin"
