chore: update libcosmic
enable desktop-systemd-scope

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ libcosmic = { git = "https://github.com/pop-os/libcosmic/", features = [
     "tokio",
     "single-instance",
     "dbus-config",
-    "desktop",
+    "desktop-systemd-scope",
     "xdg-portal",
 ] }
 tokio = { version = "1.17.0", features = ["sync", "rt", "process"] }
