--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ nix = "0.28"
 clap = { version = "4.4.8", features = ["derive"] }
 switcheroo-control = { git = "https://github.com/pop-os/dbus-settings-bindings" }
 cosmic-app-list-config = { git = "https://github.com/pop-os/cosmic-applets" }
+dirs = "5"
 
 [profile.release]
 lto = "thin"
