--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,8 @@ wgpu = ["libcosmic/wgpu"]
 
 [dependencies]
 zbus = "4.2"
-libcosmic = { git = "https://github.com/pop-os/libcosmic/", features = [
+libcosmic = { git = "https://github.com/pop-os/libcosmic/", branch = "notifications-card", features = [
+    "winit",
     "wayland",
     "tokio",
     "single-instance",
@@ -49,6 +50,9 @@ cosmic-app-list-config = { git = "https://github.com/pop-os/cosmic-applets" }
 [profile.release]
 lto = "thin"
 
-# [patch."https://github.com/pop-os/libcosmic"]
+[patch."https://github.com/pop-os/libcosmic"]
+libcosmic = { git = "https://github.com/pop-os/libcosmic//", branch = "notifications-card" }
+cosmic-config = { git = "https://github.com/pop-os/libcosmic//", branch = "notifications-card" }
+
 # cosmic-config = { path = "../libcosmic/cosmic-config/" }
 # libcosmic = { path = "../libcosmic/" }
