--- a/data/com.system76.CosmicAppLibrary.desktop
+++ b/data/com.system76.CosmicAppLibrary.desktop
@@ -1,6 +1,8 @@
 [Desktop Entry]
 Name=Applications
+Name[pl]=Aplikacje
 Comment=COSMIC App Library shell application
+Comment[pl]=Aplikacja powłoki Biblioteka aplikacji COSMIC
 Type=Application
 Exec=cosmic-app-library
 Terminal=false
