--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,9 +53,9 @@ lto = "thin"
 [patch."https://github.com/smithay/client-toolkit.git"]
 sctk = { package = "smithay-client-toolkit", version = "=0.19.2" }
 
-# [patch."https://github.com/pop-os/libcosmic"]
-# libcosmic = { git = "https://github.com/pop-os/libcosmic//", branch = "notifications-card" }
-# cosmic-config = { git = "https://github.com/pop-os/libcosmic//", branch = "notifications-card" }
+[patch."https://github.com/pop-os/libcosmic"]
+libcosmic = { git = "https://github.com/pop-os/libcosmic//", branch = "fix-dbus-subscription-id" }
+cosmic-config = { git = "https://github.com/pop-os/libcosmic//", branch = "fix-dbus-subscription-id" }
 
 # cosmic-config = { path = "../libcosmic/cosmic-config/" }
 # libcosmic = { path = "../libcosmic/" }
