--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,9 +54,9 @@ lto = "thin"
 [patch."https://github.com/smithay/client-toolkit.git"]
 sctk = { package = "smithay-client-toolkit", version = "=0.19.2" }
 
-[patch."https://github.com/pop-os/libcosmic"]
-libcosmic = { git = "https://github.com/pop-os/libcosmic//", branch = "update-fde" }
-cosmic-config = { git = "https://github.com/pop-os/libcosmic//", branch = "update-fde" }
+# [patch."https://github.com/pop-os/libcosmic"]
+# libcosmic = { git = "https://github.com/pop-os/libcosmic//", branch = "update-fde" }
+# cosmic-config = { git = "https://github.com/pop-os/libcosmic//", branch = "update-fde" }
 
 # cosmic-config = { path = "../libcosmic/cosmic-config/" }
 # libcosmic = { path = "../libcosmic/" }
