--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,8 @@ i18n-embed = { version = "0.15.3", features = [
 i18n-embed-fl = "0.9.3"
 rust-embed = "8.5.0"
 glob = "0.3.2"
-freedesktop-desktop-entry = "0.7.7"
+langtag = "0.4"
+freedesktop-desktop-entry = "0.7.8"
 shlex = "1.3.0"
 serde = { version = "1.0.217", features = ["derive"] }
 ron = "0.8.1"
@@ -54,8 +55,8 @@ lto = "thin"
 sctk = { package = "smithay-client-toolkit", version = "=0.19.2" }
 
 # [patch."https://github.com/pop-os/libcosmic"]
-# libcosmic = { git = "https://github.com/pop-os/libcosmic//", branch = "notifications-card" }
-# cosmic-config = { git = "https://github.com/pop-os/libcosmic//", branch = "notifications-card" }
+# libcosmic = { git = "https://github.com/pop-os/libcosmic//", branch = "update-fde" }
+# cosmic-config = { git = "https://github.com/pop-os/libcosmic//", branch = "update-fde" }
 
 # cosmic-config = { path = "../libcosmic/cosmic-config/" }
 # libcosmic = { path = "../libcosmic/" }
