--- a/data/com.system76.CosmicAppLibrary.desktop
+++ b/data/com.system76.CosmicAppLibrary.desktop
@@ -2,9 +2,11 @@
 Name=Applications
 Name[pl]=Aplikacje
 Name[hu]=Alkalmazások
+Name[pt_BR]=Aplicativos
 Comment=COSMIC App Library shell application
 Comment[pl]=Aplikacja powłoki Biblioteka aplikacji COSMIC
 Comment[hu]=A COSMIC alkalmazáskönyvtár felületalkalmazása
+Comment[pt_BR]=Biblioteca de aplicativos
 Type=Application
 Exec=cosmic-app-library
 Terminal=false
