i18n - update portuguese translations

--- a/data/com.system76.CosmicAppLibrary.desktop
+++ b/data/com.system76.CosmicAppLibrary.desktop
@@ -3,10 +3,12 @@ Name=Applications
 Name[pl]=Aplikacje
 Name[hu]=Alkalmazások
 Name[pt_BR]=Aplicativos
+Name[pt]=Aplicativos
 Comment=COSMIC App Library shell application
 Comment[pl]=Aplikacja powłoki Biblioteka aplikacji COSMIC
 Comment[hu]=A COSMIC alkalmazáskönyvtár felületalkalmazása
 Comment[pt_BR]=Biblioteca de aplicativos
+Comment[pt]=Biblioteca de aplicativos
 Type=Application
 Exec=cosmic-app-library
 Terminal=false
