i18n(zh-CN): update translation

--- a/data/com.system76.CosmicAppLibrary.desktop
+++ b/data/com.system76.CosmicAppLibrary.desktop
@@ -1,10 +1,12 @@
 [Desktop Entry]
 Name=Applications
+Name[zh_CN]=应用程序库
 Name[pl]=Aplikacje
 Name[hu]=Alkalmazások
 Name[pt_BR]=Aplicativos
 Name[pt]=Aplicativos
 Comment=COSMIC App Library shell application
+Comment[zh_CN]=COSMIC应用程序库命令行程序
 Comment[pl]=Aplikacja powłoki Biblioteka aplikacji COSMIC
 Comment[hu]=A COSMIC alkalmazáskönyvtár felületalkalmazása
 Comment[pt_BR]=Biblioteca de aplicativos
