--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ i18n-embed = { version = "0.15.3", features = [
 i18n-embed-fl = "0.9.3"
 rust-embed = "8.5.0"
 glob = "0.3.2"
-freedesktop-desktop-entry = "0.7.8"
+freedesktop-desktop-entry = "0.7.11"
 shlex = "1.3.0"
 serde = { version = "1.0.217", features = ["derive"] }
 ron = "0.8.1"
@@ -50,12 +50,14 @@ cosmic-app-list-config = { git = "https://github.com/pop-os/cosmic-applets" }
 [profile.release]
 lto = "thin"
 
-[patch."https://github.com/smithay/client-toolkit.git"]
-sctk = { package = "smithay-client-toolkit", version = "=0.19.2" }
+[patch.crates-io]
+sctk = { package = "smithay-client-toolkit", git = "https://github.com/smithay/client-toolkit//", rev = "c583de8" }
+[patch."https://github.com/smithay/client-toolkit"]
+sctk = { package = "smithay-client-toolkit", git = "https://github.com/smithay/client-toolkit//", rev = "c583de8" }
 
-# [patch."https://github.com/pop-os/libcosmic"]
-# libcosmic = { git = "https://github.com/pop-os/libcosmic//", branch = "update-fde" }
-# cosmic-config = { git = "https://github.com/pop-os/libcosmic//", branch = "update-fde" }
+[patch."https://github.com/pop-os/libcosmic/"]
+libcosmic = { git = "https://github.com/pop-os/libcosmic//", rev = "e838616" }
+cosmic-config = { git = "https://github.com/pop-os/libcosmic//", rev = "e838616" }
 
-# cosmic-config = { path = "../libcosmic/cosmic-config/" }
-# libcosmic = { path = "../libcosmic/" }
+# cosmic-config = { path = "../../libcosmic/cosmic-config/" }
+# libcosmic = { path = "../../libcosmic/" }
