--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ default = ["wgpu"]
 wgpu = ["libcosmic/wgpu"]
 
 [dependencies]
-zbus = "4.0"
+zbus = "5.7"
 libcosmic = { git = "https://github.com/pop-os/libcosmic/", features = [
     "winit",
     "wayland",
@@ -18,7 +18,7 @@ libcosmic = { git = "https://github.com/pop-os/libcosmic/", features = [
     "desktop-systemd-scope",
     "xdg-portal",
 ] }
-tokio = { version = "1.43.0", features = ["sync", "rt", "process"] }
+tokio = { version = "1.45", features = ["sync", "rt", "process"] }
 pretty_env_logger = "0.5"
 log = "0.4"
 once_cell = "1.20"
@@ -30,20 +30,20 @@ i18n-embed = { version = "0.15.3", features = [
     "desktop-requester",
 ] }
 i18n-embed-fl = "0.9.3"
-rust-embed = "8.5.0"
+rust-embed = "8.7"
 glob = "0.3.2"
-freedesktop-desktop-entry = "0.7.11"
+freedesktop-desktop-entry = "0.7"
 shlex = "1.3.0"
 serde = { version = "1.0.217", features = ["derive"] }
-ron = "0.8.1"
+ron = "0.10"
 notify = "*"
 anyhow = "1.0"
 itertools = "0.14"
 freedesktop-icons = { package = "cosmic-freedesktop-icons", git = "https://github.com/pop-os/freedesktop-icons" }
 current_locale = "0.1.1"
 url = "2.5"
-nix = "0.29"
-clap = { version = "4.5.30", features = ["derive"] }
+nix = "0.30"
+clap = { version = "4.5", features = ["derive"] }
 switcheroo-control = { git = "https://github.com/pop-os/dbus-settings-bindings" }
 cosmic-app-list-config = { git = "https://github.com/pop-os/cosmic-applets" }
 
@@ -55,9 +55,9 @@ sctk = { package = "smithay-client-toolkit", git = "https://github.com/smithay/c
 [patch."https://github.com/smithay/client-toolkit"]
 sctk = { package = "smithay-client-toolkit", git = "https://github.com/smithay/client-toolkit//", rev = "c583de8" }
 
-[patch."https://github.com/pop-os/libcosmic/"]
-libcosmic = { git = "https://github.com/pop-os/libcosmic//", rev = "e838616" }
-cosmic-config = { git = "https://github.com/pop-os/libcosmic//", rev = "e838616" }
+# [patch."https://github.com/pop-os/libcosmic/"]
+# libcosmic = { git = "https://github.com/pop-os/libcosmic//", rev = "e838616" }
+# cosmic-config = { git = "https://github.com/pop-os/libcosmic//", rev = "e838616" }
 
 # cosmic-config = { path = "../../libcosmic/cosmic-config/" }
 # libcosmic = { path = "../../libcosmic/" }
