--- a/data/com.system76.CosmicAppLibrary.desktop
+++ b/data/com.system76.CosmicAppLibrary.desktop
@@ -5,12 +5,14 @@ Name[pl]=Aplikacje
 Name[hu]=Alkalmazások
 Name[pt_BR]=Aplicativos
 Name[pt]=Aplicativos
+Name[ru]=Приложения
 Comment=COSMIC App Library shell application
 Comment[zh_CN]=COSMIC应用程序库命令行程序
 Comment[pl]=Aplikacja powłoki Biblioteka aplikacji COSMIC
 Comment[hu]=A COSMIC alkalmazáskönyvtár felületalkalmazása
 Comment[pt_BR]=Biblioteca de aplicativos
 Comment[pt]=Biblioteca de aplicativos
+Comment[ru]=Библиотека приложений COSMIC
 Type=Application
 Exec=cosmic-app-library
 Terminal=false
