--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,10 @@ default = ["wgpu"]
 wgpu = ["libcosmic/wgpu"]
 
 [dependencies]
-zbus = "5.7"
+zbus = "5.10"
 libcosmic = { git = "https://github.com/pop-os/libcosmic/", features = [
     "dbus-config",
+    "desktop",
     "winit",
     "wayland",
     "tokio",
@@ -18,28 +19,24 @@ libcosmic = { git = "https://github.com/pop-os/libcosmic/", features = [
     "desktop-systemd-scope",
     "xdg-portal",
 ] }
-tokio = { version = "1.45", features = ["sync", "rt", "process"] }
+tokio = { version = "1.47", features = ["sync", "rt", "process"] }
+sctk = { package = "smithay-client-toolkit", version = "0.20.0" }
 pretty_env_logger = "0.5"
 log = "0.4"
 futures = "0.3.31"
-xdg = "2.5.2"
 # Application i18n
-i18n-embed = { version = "0.15.3", features = [
+i18n-embed = { version = "0.16", features = [
     "fluent-system",
     "desktop-requester",
 ] }
-i18n-embed-fl = "0.9.3"
+i18n-embed-fl = "0.10"
 rust-embed = "8.7"
-glob = "0.3.2"
-freedesktop-desktop-entry = "0.7"
 shlex = "1.3.0"
-serde = { version = "1.0.217", features = ["derive"] }
-ron = "0.10"
+serde = { version = "1.0.219", features = ["derive"] }
+ron = "0.11"
 notify = "*"
 anyhow = "1.0"
 itertools = "0.14"
-freedesktop-icons = { package = "cosmic-freedesktop-icons", git = "https://github.com/pop-os/freedesktop-icons" }
-current_locale = "0.1.1"
 url = "2.5"
 nix = "0.30"
 clap = { version = "4.5", features = ["derive"] }
@@ -48,11 +45,6 @@ cosmic-app-list-config = { git = "https://github.com/pop-os/cosmic-applets" }
 
 [profile.release]
 lto = "thin"
-
-[patch.crates-io]
-sctk = { package = "smithay-client-toolkit", git = "https://github.com/smithay/client-toolkit//", rev = "c583de8" }
-[patch."https://github.com/smithay/client-toolkit"]
-sctk = { package = "smithay-client-toolkit", git = "https://github.com/smithay/client-toolkit//", rev = "c583de8" }
 
 # [patch."https://github.com/pop-os/libcosmic/"]
 # libcosmic = { git = "https://github.com/pop-os/libcosmic//", rev = "e838616" }
