i18n(sk): Update translations

--- a/data/com.system76.CosmicAppLibrary.desktop
+++ b/data/com.system76.CosmicAppLibrary.desktop
@@ -6,6 +6,7 @@ Name[hu]=Alkalmazások
 Name[pt_BR]=Aplicativos
 Name[pt]=Aplicativos
 Name[ru]=Приложения
+Name[sk]=Aplikácie
 Comment=COSMIC App Library shell application
 Comment[zh_CN]=COSMIC应用程序库命令行程序
 Comment[pl]=Aplikacja powłoki Biblioteka aplikacji COSMIC
@@ -13,6 +14,7 @@ Comment[hu]=A COSMIC alkalmazáskönyvtár felületalkalmazása
 Comment[pt_BR]=Biblioteca de aplicativos
 Comment[pt]=Biblioteca de aplicativos
 Comment[ru]=Библиотека приложений COSMIC
+Comment[sk]=Shell aplikácia knižnice aplikácií COSMIC
 Type=Application
 Exec=cosmic-app-library
 Terminal=false
