i18n(es): update translations

--- a/data/com.system76.CosmicAppLibrary.desktop
+++ b/data/com.system76.CosmicAppLibrary.desktop
@@ -7,6 +7,7 @@ Name[pt_BR]=Aplicativos
 Name[pt]=Aplicativos
 Name[ru]=Приложения
 Name[sk]=Aplikácie
+Name[es]=Aplicaciones
 Comment=COSMIC App Library shell application
 Comment[zh_CN]=COSMIC应用程序库命令行程序
 Comment[pl]=Aplikacja powłoki Biblioteka aplikacji COSMIC
@@ -15,6 +16,7 @@ Comment[pt_BR]=Biblioteca de aplicativos
 Comment[pt]=Biblioteca de aplicativos
 Comment[ru]=Библиотека приложений COSMIC
 Comment[sk]=Shell aplikácia knižnice aplikácií COSMIC
+Comment[es]=Aplicación shell de biblioteca para aplicaciones COSMIC
 Type=Application
 Exec=cosmic-app-library
 Terminal=false
