i18n(cs): Update Czech translation

--- a/data/com.system76.CosmicAppLibrary.desktop
+++ b/data/com.system76.CosmicAppLibrary.desktop
@@ -1,6 +1,7 @@
 [Desktop Entry]
 Name=Applications
 Name[ar]=تطبيقات
+Name[cs]=Aplikace
 Name[zh_CN]=应用程序库
 Name[pl]=Aplikacje
 Name[hu]=Alkalmazások
@@ -11,6 +12,7 @@ Name[sk]=Aplikácie
 Name[es]=Aplicaciones
 Comment=COSMIC App Library shell application
 Comment[ar]=تطبيق صدفة مكتبة تطبيقات COSMIC
+Comment[cs]=Shell aplikace knihovny aplikací COSMIC
 Comment[zh_CN]=COSMIC应用程序库命令行程序
 Comment[pl]=Aplikacja powłoki Biblioteka aplikacji COSMIC
 Comment[hu]=A COSMIC alkalmazáskönyvtár felületalkalmazása
