--- a/data/com.system76.CosmicAppLibrary.desktop
+++ b/data/com.system76.CosmicAppLibrary.desktop
@@ -8,6 +8,7 @@ Name[hu]=Alkalmazások
 Name[pt_BR]=Aplicativos
 Name[pt]=Aplicativos
 Name[ru]=Приложения
+Name[sv]=Program
 Name[sk]=Aplikácie
 Name[es]=Aplicaciones
 Comment=COSMIC App Library shell application
@@ -19,6 +20,7 @@ Comment[hu]=A COSMIC alkalmazáskönyvtár felületalkalmazása
 Comment[pt_BR]=Biblioteca de aplicativos
 Comment[pt]=Biblioteca de aplicativos
 Comment[ru]=Библиотека приложений COSMIC
+Comment[sv]=COSMIC programbibliotek skalprogram
 Comment[sk]=Shell aplikácia knižnice aplikácií COSMIC
 Comment[es]=Aplicación shell de biblioteca para aplicaciones COSMIC
 Type=Application
